@@ -220,6 +220,9 @@
 					RelativePath="..\Utils\DIB.cpp">
 				</File>
 				<File
+					RelativePath="..\Utils\DirFileEnum.cpp">
+				</File>
+				<File
 					RelativePath="..\Utils\DirFileList.cpp">
 				</File>
 				<File
@@ -333,6 +336,9 @@
 				</File>
 				<File
 					RelativePath="..\Utils\DIB.h">
+				</File>
+				<File
+					RelativePath="..\Utils\DirFileEnum.h">
 				</File>
 				<File
 					RelativePath="..\Utils\DirFileList.h">
@@ -741,10 +747,10 @@
 					RelativePath="..\Languages\res\ssh.ico">
 				</File>
 				<File
-					RelativePath="..\Icons\Tortoise.ico">
+					RelativePath="..\Languages\res\Tortoise.ico">
 				</File>
 				<File
-					RelativePath="..\Languages\res\Tortoise.ico">
+					RelativePath="..\Icons\Tortoise.ico">
 				</File>
 				<File
 					RelativePath="..\Icons\Tortoise13by13.ico">
